// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockActionButton renders BlockActionButton when node is empty correctly 1`] = `
<div>
  <div
    aria-haspopup="dialog"
    contenteditable="false"
    data-drag-handle="true"
    data-testid="editor-block-action-button"
    draggable="true"
    style="z-index: 2;"
  >
    <button
      class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-dzgAdI-btnType-unstyled mc-c-iiEeHJ-fcHofs-size-md mc-c-PJLV mc-c-PJLV-klARUB-size-sm"
      role="button"
      type="button"
    >
      <span
        aria-label="block-action-add"
        class="mc-icon mc-icon-block-action-add"
        role="img"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02943 3 3 7.02943 3 12C3 16.9706 7.02943 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02943 16.9706 3 12 3Z"
            fill="#e0e0e0"
            fill-rule="evenodd"
          />
          <path
            d="M13 8C13 7.44772 12.5523 7 12 7C11.4477 7 11 7.44772 11 8V11H8C7.44772 11 7 11.4477 7 12C7 12.5523 7.44772 13 8 13H11V16C11 16.5523 11.4477 17 12 17C12.5523 17 13 16.5523 13 16V13H16C16.5523 13 17 12.5523 17 12C17 11.4477 16.5523 11 16 11H13V8Z"
            fill="#73707e"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`BlockActionButton renders BlockActionButton when node is not empty correctly 1`] = `
<div>
  <div
    aria-haspopup="dialog"
    contenteditable="false"
    data-drag-handle="true"
    data-testid="editor-block-action-button"
    draggable="true"
    style="z-index: 2;"
  >
    <button
      class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-dzgAdI-btnType-unstyled mc-c-iiEeHJ-fcHofs-size-md mc-c-PJLV mc-c-PJLV-klARUB-size-sm"
      role="button"
      type="button"
    >
      <span
        aria-label="drag-secondary"
        class="mc-icon mc-icon-drag-secondary"
        role="img"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-9a9 9 0 1 0 0 18 9 9 0 0 0 0-18Z"
            fill="#e0e0e0"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M7.833 8.5c-.46 0-.833.448-.833 1s.373 1 .833 1h8.334c.46 0 .833-.448.833-1s-.373-1-.833-1H7.833Zm0 5c-.46 0-.833.448-.833 1s.373 1 .833 1h8.334c.46 0 .833-.448.833-1s-.373-1-.833-1H7.833Z"
            fill="#73707e"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`BlockActionButton triggers mouse enter/leave event normally 1`] = `
<div>
  <div
    aria-haspopup="dialog"
    contenteditable="false"
    data-drag-handle="true"
    data-testid="editor-block-action-button"
    draggable="true"
    style="z-index: 2;"
  >
    <button
      class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-dzgAdI-btnType-unstyled mc-c-iiEeHJ-fcHofs-size-md mc-c-PJLV mc-c-PJLV-klARUB-size-sm"
      role="button"
      type="button"
    >
      <span
        aria-label="drag-secondary"
        class="mc-icon mc-icon-drag-secondary"
        role="img"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-9a9 9 0 1 0 0 18 9 9 0 0 0 0-18Z"
            fill="#dee7fe"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M7.833 8.5c-.46 0-.833.448-.833 1s.373 1 .833 1h8.334c.46 0 .833-.448.833-1s-.373-1-.833-1H7.833Zm0 5c-.46 0-.833.448-.833 1s.373 1 .833 1h8.334c.46 0 .833-.448.833-1s-.373-1-.833-1H7.833Z"
            fill="#356cf9"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`BlockActionButton triggers mouse enter/leave event normally 2`] = `
<div>
  <div
    aria-haspopup="dialog"
    contenteditable="false"
    data-drag-handle="true"
    data-testid="editor-block-action-button"
    draggable="true"
    style="z-index: 2;"
  >
    <button
      class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-dzgAdI-btnType-unstyled mc-c-iiEeHJ-fcHofs-size-md mc-c-PJLV mc-c-PJLV-klARUB-size-sm"
      role="button"
      type="button"
    >
      <span
        aria-label="drag-secondary"
        class="mc-icon mc-icon-drag-secondary"
        role="img"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-9a9 9 0 1 0 0 18 9 9 0 0 0 0-18Z"
            fill="#e0e0e0"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M7.833 8.5c-.46 0-.833.448-.833 1s.373 1 .833 1h8.334c.46 0 .833-.448.833-1s-.373-1-.833-1H7.833Zm0 5c-.46 0-.833.448-.833 1s.373 1 .833 1h8.334c.46 0 .833-.448.833-1s-.373-1-.833-1H7.833Z"
            fill="#73707e"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
